infra/k8s-dev/user-commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-commands-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-commands
  template:
    metadata:
      labels:
        app: user-commands
    spec:
      containers:
        - name: user-commands
          image: fadeleafj/user-commands
---
apiVersion: v1
kind: Service
metadata:
  name: user-commands-srv
spec:
  selector:
    app: user-commands
  ports:
    - name: user-commands
      protocol: TCP
      port: 3000
      targetPort: 3000
